# howlers-markets

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  alembic.ini  conftest.py  pyproject.toml
.claude/rules/: sources.md
docs/: ARCHITECTURE.md  CONVENTIONS.md  DATA-MODEL.md  ONTOLOGY.md  OPERATIONS.md  ROADMAP.md  TESTING.md
docs/superpowers/plans/: 2026-04-22-stage-4-classifier.md
docs/superpowers/specs/: 2026-04-22-stage-4-classifier-design.md
infrastructure/docker/: .env  docker-compose.yml
infrastructure/sql/migrations/versions/: 001_initial_base_schemas.py  002_stage4_classifier.py
infrastructure/sql/seed/: ontology.sql
scripts/: backfill_classify.py  healthcheck.py  test_slice_mock.py  test_vertical_slice.py
